# zebende

./: .gitignore  404.html  README.md  build.zig  build.zig.old  build.zig.zon  graphics.ipynb  import_tws.ipynb  loop_dfa_fof.ipynb  mkdocs.yml  numba_dcca.ipynb  pyproject.toml  test.ipynb  test_dfa_FOF.ipynb  test_dmc.ipynb  test_dmcx2_c.ipynb  test_pdcca.ipynb  test_pdcca.py  test_pdcca_FOF.ipynb  teste.py  teste_dfa.txt  teste_gz.ipynb
.zig-cache/o/107ac35ef97a1ea2f670bc25a4a10243/: libzebendezig.dylib
.zig-cache/o/1a6e392802563d8cb51e79e61adeca93/: libzebendezig.dylib
.zig-cache/o/1b2864633ddf08fe7a0e5839351afba2/: zebendezig.lib
.zig-cache/o/1b5857d92f6c9c9f6f9bdb472d216c55/: libzebendezig.dylib
.zig-cache/o/1c3849c6a296137a3c4def95e4840199/: libzebendezig.dylib
.zig-cache/o/21e6eff49582e91a28deac2bb6b749a6/: libzebendezig.dylib
.zig-cache/o/321fa687109477f9e074f7ade5d28139/: zebende_opt.lib
.zig-cache/o/4e186cc8babfce1dbe28044a4b5ef09b/: libzebendezig.dylib
.zig-cache/o/6703323c3a835b006db0157a3b077d3a/: libzebende_opt.dylib
.zig-cache/o/6932eca7481e310f765d7bc5bdbe184e/: zebendezig.lib
.zig-cache/o/7e3e55883a52ee454f930c1907b96c57/: libzebendezig.dylib
.zig-cache/o/9575157215a907e0aafa60b095047be5/: zebendezig.lib
.zig-cache/o/9e156f9f6aeb62f63bbad485770fc858/: libzebende_opt.dylib
.zig-cache/o/b7014214e65736dd833ec57cff8a9a9d/: libzebende_opt.dylib
.zig-cache/o/be35b2402421c61e2c1c93a3d1ab0a9e/: libzebendezig.dylib
.zig-cache/o/bea9178da806fdf4790967aa208fe899/: libzebendezig.dylib
.zig-cache/o/c0d70926e8dcc11196b5d310264dc317/: libzebende_opt.dylib
.zig-cache/o/cb82a32a72a9932bc2a7d3fe9d5f880c/: zebende_opt.lib
.zig-cache/o/d383544d50e1e3dcfd44956d3edc57e4/: zebendezig.lib
.zig-cache/o/e1671f75bccb4fa3e996d433d1f98961/: zebendezig.lib
.zig-cache/o/ec0113a058140e6e68f23c4abfa19538/: libzebendezig_.dylib
.zig-cache/o/f7bed9e92a541b69fc51c0e793edae9f/: libzebendezig.dylib
c_src/: rhodccav03.c
dev_utils/: clean_zig_out.py  copy_lib.py
docs/: index.md
docs/assets/favicon_io/: about.txt
docs/stylesheet/: extra.css
site/: index.html
src/: hash.txt  zebende.zig  zebende_1d_data_C.zig  zebende_2d_data_C.zig  zebende_det_alloc_only.zig  zebende_n_optimization.zig  zebende_opt.zig  zebende_opt_full.zig  zebende_parallel.zig  zebende_parallel_handlers.zig  zebende_parallel_pdcca_end.zig  zebende_teste.zig  zebende_threads.zig  zebende_transpose.zig
stylesheet/: extra.css
test_data/: 01_Preproc_channels_data.ipynb  experiments_info.csv  time_window_scales.txt
test_data/data_pre_proc/S001/: S001_03_four_channels.csv  S001_T03_F3_F6_P3_P6.csv  four_channels.csv
test_data/data_pre_proc/S001/S001_03/: S001_03_F3.txt  S001_03_F6.txt  S001_03_P3.txt  S001_03_P6.txt
test_data/data_pre_proc/S001/S001_04/: S001_04_F3.txt  S001_04_F6.txt  (+2 more)
tests/: test.ipynb  test_dmc.ipynb
time_results/: results_det.txt  results_opt.txt
zebende/: __init__.py  array_to_c_pointer_convert.py  dcca.py  dcca_of_from_dmcx2_of.py  detrended_series.py  dfa.py  dfa_pure_python.py  dmc_of_all_as_y.py  dmcx2.py  dmcx2_from_p_dcca_matrix.py  dmcx2_pure_python.py  get_platform.py  integrated_series.py  mat_index_comb.py  ordering_x_dmcx2_of.py  p_dcca.py  p_dcca_matrix_output.py  p_dcca_matrix_to_simple.py  p_dcca_pure_python.py  p_dcca_simple_output.py  p_dcca_simple_to_matrix.py  print_pdcca_matrix_by_level.py  time_windows.py
zebende/zig_libs/: libzebendezig.dylib
zebende/zig_libs/aarch64-macos/: libzebendezig.dylib
zebende/zig_libs/x86_64-macos/: libzebendezig.dylib
(+136 files in other folders)
