[tool.poetry]
name = "zebende"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
numba = "^0.60.0"
cupy-cuda12x = "^13.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-coverage = "^0.0"
taskipy = "^1.13.0"
ruff = "^0.4.10"
ipykernel = "^6.29.5"
pandas = "^2.2.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.27"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
docs = 'mkdocs serve'
site = 'mkdocs gh-deploy'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
